# burn-guide

./: Cargo.toml
.helix/: languages.toml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/infer/: Cargo.toml
crates/infer/src/: main.rs
crates/model/: Cargo.toml
crates/model/benches/: run_inference.rs
crates/model/src/: data.rs  inference.rs  lib.rs  model.rs
crates/train/: Cargo.toml
crates/train/src/: main.rs
src/: data.rs  inference.rs  lib.rs  main.rs  model.rs  training.rs
