[package]
name = "infer"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[features]
# Features for selecting a specific backend
ndarray = [ "backend/ndarray" ]
ndarray-blas-accelerate = [ "backend/ndarray-blas-accelerate" ]
ndarray-blas-netlib = [ "backend/ndarray-blas-netlib" ]
ndarray-blas-openblas = [ "backend/ndarray-blas-openblas" ]
tch-cpu = [ "backend/tch-cpu" ]
tch-gpu = [ "backend/tch-gpu" ]
candle-cpu = [ "backend/candle-cpu" ]
candle-gpu = [ "backend/candle-gpu" ]
wgpu = [ "backend/wgpu" ]
wgpu-spirv = [ "backend/wgpu-spirv" ]

[dependencies]
burn = { workspace = true, features = [ ] }

backend = { path = "../backend" }
model = { path = "../model" }
