[package]
name = "model"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[features]
train = [ "burn/train" ]

[dependencies]
burn = { workspace = true, features = [ "dataset", "vision" ] }

[dev-dependencies]
backend = { path = "../backend" }
criterion = "0.5.1"
itertools = "0.13.0"
pretty_assertions = "1.4.1"

[[bench]]
name = "run_inference"
harness = false
